--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <ng-container matColumnDef="done">
     <mat-header-cell *matHeaderCellDef> Done </mat-header-cell>
     <mat-cell *matCellDef="let item">
-      <mat-checkbox ></mat-checkbox>
+      <mat-checkbox [checked]="item.done" (change)="changeDoneFlag($event, item.id)"></mat-checkbox>
     </mat-cell>
   </ng-container>
 
