--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,13 @@
     </mat-cell>
   </ng-container>
 
+  <ng-container matColumnDef="delete">
+    <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
+    <mat-cell *matCellDef="let item">
+      <button mat-raised-button (click)="deleteToDo(item.id)">Delete</button>
+    </mat-cell>
+  </ng-container>
+
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
