--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
+<div *ngIf="showUserForm">
+  <mat-form-field>
+    <mat-select placeholder="User" (value)="user" #itemUser>
+      <mat-option *ngFor="let person of people | async" [(value)]="person.name">
+        {{person.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button mat-raised-button (click)="setUser(itemUser.value)" [disabled]="!itemUser.value">Confirm</button>
+</div>
+
+<div *ngIf="!showUserForm">
+  <h1>Hello {{user}}</h1>
+  <button mat-raised-button (click)="showUserForm = true">Not {{user}}?</button>
+</div>
+
 <div *ngIf="showEditForm">
   <mat-form-field>
     <input matInput placeholder="Description" [value]="description" #itemDescription required>
@@ -36,41 +53,44 @@
   <button mat-raised-button (click)="showAddForm = false">Cancel</button>
 </div>
 
-<mat-table #table [dataSource]="todos">
-  <ng-container matColumnDef="description">
-    <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
-    <mat-cell *matCellDef="let item">{{item.description}}</mat-cell>
-  </ng-container>
+<div *ngIf="!showUserForm">
+  <mat-table #table [dataSource]="todos">
+    <ng-container matColumnDef="description">
+      <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+      <mat-cell *matCellDef="let item">{{item.description}}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="assignedTo">
-    <mat-header-cell *matHeaderCellDef> AssignedTo </mat-header-cell>
-    <mat-cell *matCellDef="let item"> {{item.assignedTo}} </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="assignedTo">
+      <mat-header-cell *matHeaderCellDef> AssignedTo </mat-header-cell>
+      <mat-cell *matCellDef="let item"> {{item.assignedTo}} </mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="done">
-    <mat-header-cell *matHeaderCellDef> Done </mat-header-cell>
-    <mat-cell *matCellDef="let item">
-      <mat-checkbox [checked]="item.done" (change)="changeDoneFlag($event, item.id)"></mat-checkbox>
-    </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="done">
+      <mat-header-cell *matHeaderCellDef> Done </mat-header-cell>
+      <mat-cell *matCellDef="let item">
+        <mat-checkbox [checked]="item.done" (change)="changeDoneFlag($event, item.id)"></mat-checkbox>
+      </mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="edit">
-    <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
-    <mat-cell *matCellDef="let item">
-      <button mat-raised-button (click)="enableEditForm(item.id, item.description, item.assignedTo, item.done)">Edit</button>
-    </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="edit">
+      <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
+      <mat-cell *matCellDef="let item">
+        <button mat-raised-button (click)="enableEditForm(item.id, item.description, item.assignedTo, item.done)">Edit</button>
+      </mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="delete">
-    <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
-    <mat-cell *matCellDef="let item">
-      <button mat-raised-button (click)="deleteToDo(item.id)">Delete</button>
-    </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="delete">
+      <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
+      <mat-cell *matCellDef="let item">
+        <button mat-raised-button (click)="deleteToDo(item.id)">Delete</button>
+      </mat-cell>
+    </ng-container>
 
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 
-<button mat-raised-button (click)="enableAddForm()">Add new ToDo Item</button>
-<mat-checkbox [(ngModel)]="showOnlyUndone" (change)="filterItems()">Show Only Undone</mat-checkbox>
+  <button mat-raised-button (click)="enableAddForm()">Add new ToDo Item</button>
+  <mat-checkbox [(ngModel)]="showOnlyUndone" (change)="filterItems()" [disabled]="!user">Show Only Undone</mat-checkbox>
+  <mat-checkbox [(ngModel)]="showOnlyAssigned" (change)="filterItems()" [disabled]="!user">Show Only Assigned</mat-checkbox>
+</div>
